--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@
                 <li><a href="request-job.html">Request a Job</a></li>
                 <li><a href="testimonials.html">Testimonials</a></li>
                 <li><a href="contact.html" class="active">Contact</a></li>
+                <li class="nav-item"><a href="terms.html">Terms & Conditions</a></li>
             </ul>
         </nav>
     </header>
@@ -63,6 +64,7 @@
                 <li><a href="request-job.html">Request a Job</a></li>
                 <li><a href="testimonials.html">Testimonials</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="terms.html">Terms & Conditions</a></li>
             </ul>
         </div>
         <div class="footer-social">
