--- a/jobs.html
+++ b/jobs.html
@@ -35,6 +35,9 @@
             <h1 data-aos="fade-down" data-aos-delay="200">Current Job Openings</h1>
             <p data-aos="fade-up" data-aos-delay="300">Explore international opportunities and apply today!</p>
         </section>
+        <section class="country-card-instructions" data-aos="fade-in" data-aos-delay="100" style="text-align:center; margin: 1.5rem 0 0.5rem 0; font-size:1.15rem; color:#003366; font-weight:500;">
+          Click a flag below to view jobs available in that country.
+        </section>
         <section class="country-card-grid">
           <div class="country-card" data-country="canada">
             <img class="flag-icon" src="https://flagcdn.com/48x36/ca.png" alt="Canada flag">
