--- a/index.html
+++ b/index.html
@@ -8,21 +8,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&family=Roboto:wght@400;500&family=Orbitron:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
-    <header>
+    <header class="wow animate__animated animate__fadeInDown" data-wow-delay="0.1s">
         <nav class="navbar">
-            <div class="logo">
+            <div class="logo wow animate__animated animate__fadeInLeft" data-wow-delay="0.2s">
                 <a href="index.html" class="logo-link" aria-label="VisaPath Home">
                   <span class="logo-text"><span class="logo-visa">Visa</span><span class="logo-path">Path</span></span>
                 </a>
             </div>
-            <button class="nav-toggle" aria-label="Open navigation" aria-expanded="false">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </button>
-            <ul class="nav-links">
+            <ul class="nav-links wow animate__animated animate__fadeInRight" data-wow-delay="0.3s">
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="jobs.html">Jobs Available</a></li>
@@ -31,13 +27,24 @@
                 <li><a href="contact.html">Contact</a></li>
                 <li class="nav-item"><a href="terms.html">Terms & Conditions</a></li>
             </ul>
-            <div class="mobile-nav-overlay"></div>
+            <select class="nav-dropdown" aria-label="Navigation" onchange="if(this.value) window.location.href=this.value;">
+                <option value="" disabled selected>Menu</option>
+                <option value="index.html">Home</option>
+                <option value="about.html">About</option>
+                <option value="jobs.html">Jobs Available</option>
+                <option value="request-job.html">Request a Job</option>
+                <option value="testimonials.html">Testimonials</option>
+                <option value="contact.html">Contact</option>
+                <option value="terms.html">Terms & Conditions</option>
+            </select>
         </nav>
     </header>
-    <main>
+    <main id="main-content">
         <section class="hero">
             <div class="hero-bg">
-                <img src="assets/images/hero.png" alt="Hero Background" />
+                <div class="parallax-layer parallax-layer1"></div>
+                <div class="parallax-layer parallax-layer2"></div>
+                <div class="parallax-layer parallax-layer3"></div>
             </div>
             <div class="hero-content">
                 <h1 class="agency-name">VisaPath</h1>
@@ -122,5 +129,7 @@
         <div class="footer-copy">&copy; 2025 VisaPath. All rights reserved.</div>
     </footer>
     <script src="js/script-home.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+    <script>new WOW().init();</script>
 </body>
 </html>
