--- a/request-job.html
+++ b/request-job.html
@@ -26,6 +26,16 @@
                 <li><a href="contact.html">Contact</a></li>
                 <li class="nav-item"><a href="terms.html">Terms & Conditions</a></li>
             </ul>
+            <select class="nav-dropdown" aria-label="Navigation" onchange="if(this.value) window.location.href=this.value;">
+                <option value="" disabled selected>Menu</option>
+                <option value="index.html">Home</option>
+                <option value="about.html">About</option>
+                <option value="jobs.html">Jobs Available</option>
+                <option value="request-job.html">Request a Job</option>
+                <option value="testimonials.html">Testimonials</option>
+                <option value="contact.html">Contact</option>
+                <option value="terms.html">Terms & Conditions</option>
+            </select>
         </nav>
     </header>
     <main>
@@ -34,21 +44,7 @@
             <p>Submit your details and let us help you find your next opportunity abroad.</p>
         </section>
         <section class="request-form-section">
-            <form id="job-request-form" class="request-form" autocomplete="off">
-                <label for="name">Full Name</label>
-                <input type="text" id="name" name="name" required>
-                <label for="country">Country</label>
-                <input type="text" id="country" name="country" required>
-                <label for="position">Desired Position</label>
-                <input type="text" id="position" name="position" required>
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
-                <label for="phone">Phone</label>
-                <input type="tel" id="phone" name="phone" required>
-                <label for="notes">Additional Notes</label>
-                <textarea id="notes" name="notes" rows="3"></textarea>
-                <button type="submit" class="btn btn-primary">Submit Request</button>
-            </form>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScl1cqhVSxGjm0JULv9T2UQbbxfBuX5pwobGugF15ELuLtDLQ/viewform?embedded=true" width="640" height="956" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             <div class="form-note">
                 <strong>Note:</strong> First come, first served – no discrimination. All applicants are considered equally.
             </div>
