--- a/terms.html
+++ b/terms.html
@@ -68,6 +68,18 @@
   </style>
 </head>
 <body>
+  <nav class="navbar" style="background: #003366; color: #fff;">
+    <select class="nav-dropdown" aria-label="Navigation" onchange="if(this.value) window.location.href=this.value;" style="margin: 0.7em auto 0.7em auto;">
+      <option value="" disabled selected>Menu</option>
+      <option value="index.html">Home</option>
+      <option value="about.html">About</option>
+      <option value="jobs.html">Jobs Available</option>
+      <option value="request-job.html">Request a Job</option>
+      <option value="testimonials.html">Testimonials</option>
+      <option value="contact.html">Contact</option>
+      <option value="terms.html">Terms & Conditions</option>
+    </select>
+  </nav>
   <div class="terms-header">
     <span class="logo">VisaPath</span>
     <div>Terms and Conditions</div>
