--- a/testimonials.html
+++ b/testimonials.html
@@ -28,6 +28,16 @@
                 <li><a href="contact.html">Contact</a></li>
                 <li class="nav-item"><a href="terms.html">Terms & Conditions</a></li>
             </ul>
+            <select class="nav-dropdown" aria-label="Navigation" onchange="if(this.value) window.location.href=this.value;">
+                <option value="" disabled selected>Menu</option>
+                <option value="index.html">Home</option>
+                <option value="about.html">About</option>
+                <option value="jobs.html">Jobs Available</option>
+                <option value="request-job.html">Request a Job</option>
+                <option value="testimonials.html">Testimonials</option>
+                <option value="contact.html">Contact</option>
+                <option value="terms.html">Terms & Conditions</option>
+            </select>
         </nav>
     </header>
     <main>
