--- a/pages/jobs.html
+++ b/pages/jobs.html
@@ -27,6 +27,7 @@
                 <li><a href="testimonials.html">Testimonials</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
+            <button id="logoutBtn" class="logout-icon-btn" title="Logout" style="margin-left:auto;">⎋</button>
         </nav>
     </header>
     <main>
@@ -208,6 +209,29 @@
         </div>
         <div class="footer-copy">&copy; 2025 VisaPath. All rights reserved.</div>
     </footer>
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+    <script>
+      const firebaseConfig = {
+        apiKey: "AIzaSyANSXoLnficUUynGg5oTAFPTrk8Xf0sH6E",
+        authDomain: "visapath-bf564.firebaseapp.com",
+        projectId: "visapath-bf564",
+        storageBucket: "visapath-bf564.appspot.com",
+        messagingSenderId: "141265978291",
+        appId: "1:141265978291:web:YOUR_APP_ID"
+      };
+      firebase.initializeApp(firebaseConfig);
+      firebase.auth().onAuthStateChanged(function(user) {
+        if (!user) {
+          window.location.href = "../auth.html";
+        }
+      });
+      document.getElementById('logoutBtn').onclick = function() {
+        firebase.auth().signOut().then(function() {
+          window.location.href = '../auth.html';
+        });
+      };
+    </script>
     <script src="js/script-jobs.js"></script>
     <script src="js/script-apply-modal.js"></script>
     <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
