--- a/terms.html
+++ b/terms.html
@@ -129,6 +129,12 @@
     <h2>9. Contact Information</h2>
     <p>If you have any questions about these terms, please contact us at <a href="mailto:info@visapath.com">info@visapath.com</a>.</p>
   </div>
+  <div class="footer-partners" style="display: flex; justify-content: center; align-items: center; gap: 1.5rem; margin: 1.2rem 0 0.5rem 0; flex-wrap: wrap;">
+    <img src="assets/images/patners/mastercard.jpg" alt="Mastercard" style="height: 32px; width: auto;">
+    <img src="assets/images/patners/american express.jpg" alt="American Express" style="height: 32px; width: auto;">
+    <img src="assets/images/patners/paypal.jpg" alt="PayPal" style="height: 32px; width: auto;">
+    <img src="assets/images/patners/visa.jpg" alt="Visa" style="height: 32px; width: auto;">
+  </div>
   <a class="back-link" href="index.html">&larr; Back to Home</a>
 </body>
 </html> 
