--- a/testimonials.html
+++ b/testimonials.html
@@ -47,47 +47,47 @@
         </section>
         <section class="testimonials-list" data-aos="fade-up" data-aos-delay="100">
             <div class="testimonial-card" data-aos="zoom-in" data-aos-delay="200">
-                <img src="assets/images/testimonial1-placeholder.jpg" alt="Client Photo" class="testimonial-img">
+                <img src="assets/images/testimonials/jane w nurse.jpg" alt="Jane W., Nurse" class="testimonial-img">
                 <blockquote>"VisaPath made my dream of working in Canada a reality. The process was smooth and transparent!"</blockquote>
                 <span class="client-name">— Jane W., Nurse</span>
             </div>
             <div class="testimonial-card" data-aos="zoom-in" data-aos-delay="300">
-                <img src="assets/images/testimonial2-placeholder.jpg" alt="Client Photo" class="testimonial-img">
+                <img src="assets/images/testimonials/peter m hotel attendant.jpg" alt="Peter M., Hotel Attendant" class="testimonial-img">
                 <blockquote>"I got my job in Dubai within months. The team was supportive and always available."</blockquote>
                 <span class="client-name">— Peter M., Hotel Attendant</span>
             </div>
             <div class="testimonial-card" data-aos="zoom-in" data-aos-delay="400">
-                <img src="assets/images/testimonial3-placeholder.jpg" alt="Client Photo" class="testimonial-img">
+                <img src="assets/images/testimonials/amina software developer.jpg" alt="Amina K., Software Developer" class="testimonial-img">
                 <blockquote>"VisaPath values diversity and treated me with respect throughout my journey."</blockquote>
                 <span class="client-name">— Amina K., Software Developer</span>
             </div>
             <div class="testimonial-card" data-aos="zoom-in" data-aos-delay="500">
-                <img src="assets/images/testimonial4-placeholder.jpg" alt="Client Photo" class="testimonial-img">
+                <img src="assets/images/testimonials/samuel o cleaner.jpg" alt="Samuel O., Cleaner" class="testimonial-img">
                 <blockquote>"I was placed as a cleaner in Qatar. The agency was honest and helped me every step of the way."</blockquote>
                 <span class="client-name">— Samuel O., Cleaner</span>
             </div>
             <div class="testimonial-card" data-aos="zoom-in" data-aos-delay="600">
-                <img src="assets/images/testimonial5-placeholder.jpg" alt="Client Photo" class="testimonial-img">
+                <img src="assets/images/testimonials/mary n store attendant.jpg" alt="Mary N., Store Attendant" class="testimonial-img">
                 <blockquote>"From application to arrival, VisaPath made my move to Oman as a store attendant stress-free."</blockquote>
                 <span class="client-name">— Mary N., Store Attendant</span>
             </div>
             <div class="testimonial-card" data-aos="zoom-in" data-aos-delay="700">
-                <img src="assets/images/testimonial6-placeholder.jpg" alt="Client Photo" class="testimonial-img">
+                <img src="assets/images/testimonials/john g gardener.jpg" alt="John G., Gardener" class="testimonial-img">
                 <blockquote>"I am now a gardener in Saudi Arabia. Thank you VisaPath for believing in me!"</blockquote>
                 <span class="client-name">— John G., Gardener</span>
             </div>
             <div class="testimonial-card" data-aos="zoom-in" data-aos-delay="800">
-                <img src="assets/images/testimonial7-placeholder.jpg" alt="Client Photo" class="testimonial-img">
+                <img src="assets/images/testimonials/grace k chef.jpg" alt="Grace K., Chef" class="testimonial-img">
                 <blockquote>"I was able to work as a chef in the UK. The process was clear and fair."</blockquote>
                 <span class="client-name">— Grace K., Chef</span>
             </div>
             <div class="testimonial-card" data-aos="zoom-in" data-aos-delay="900">
-                <img src="assets/images/testimonial8-placeholder.jpg" alt="Client Photo" class="testimonial-img">
+                <img src="assets/images/testimonials/david m security guard.jpg" alt="David M., Security Guard" class="testimonial-img">
                 <blockquote>"VisaPath helped me become a security guard in Bahrain. I recommend them to everyone!"</blockquote>
                 <span class="client-name">— David M., Security Guard</span>
             </div>
             <div class="testimonial-card" data-aos="zoom-in" data-aos-delay="1000">
-                <img src="assets/images/testimonial9-placeholder.jpg" alt="Client Photo" class="testimonial-img">
+                <img src="assets/images/testimonials/linda s teacher.jpg" alt="Linda S., Teacher" class="testimonial-img">
                 <blockquote>"I am now a teacher in the UK. The support was amazing and the team is so friendly."</blockquote>
                 <span class="client-name">— Linda S., Teacher</span>
             </div>
@@ -114,6 +114,12 @@
             <a href="#" title="LinkedIn" aria-label="LinkedIn">
                 <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="16" cy="16" r="16" fill="#0077B5"/><rect x="10" y="13" width="2.5" height="8" fill="#fff"/><circle cx="11.25" cy="11.25" r="1.25" fill="#fff"/><rect x="14" y="16" width="2.5" height="5" fill="#fff"/><rect x="17" y="16" width="2.5" height="5" fill="#fff"/><path d="M18.25 16c0-1.25 1.25-2.25 2.5-2.25s2.5 1 2.5 2.25v5h-2.5v-5z" fill="#fff"/></svg>
             </a>
+        </div>
+        <div class="footer-partners" style="display: flex; justify-content: center; align-items: center; gap: 1.5rem; margin: 1.2rem 0 0.5rem 0; flex-wrap: wrap;">
+          <img src="assets/images/patners/mastercard.jpg" alt="Mastercard" style="height: 32px; width: auto;">
+          <img src="assets/images/patners/american express.jpg" alt="American Express" style="height: 32px; width: auto;">
+          <img src="assets/images/patners/paypal.jpg" alt="PayPal" style="height: 32px; width: auto;">
+          <img src="assets/images/patners/visa.jpg" alt="Visa" style="height: 32px; width: auto;">
         </div>
         <div class="footer-copy">&copy; 2025 VisaPath. All rights reserved.</div>
     </footer>
