--- a/about.html
+++ b/about.html
@@ -86,19 +86,19 @@
             <h2 class="wow animate__animated animate__fadeInDown">Meet Our Team</h2>
             <div class="team-list" style="display: flex; flex-wrap: wrap; gap: 2rem; justify-content: center;">
                 <div class="team-card wow animate__animated animate__zoomIn" data-wow-delay="0.2s" style="background: #fff; color: #222; border-radius: 1.2rem; box-shadow: 0 2px 16px rgba(30,144,255,0.10); padding: 2rem 1.5rem 1.5rem 1.5rem; max-width: 260px; min-width: 220px; display: flex; flex-direction: column; align-items: center;">
-                    <img src="assets/images/testimonial1-placeholder.jpg" alt="Jane Wambui - Founder" width="80" height="80" style="border-radius:50%;object-fit:cover; margin-bottom: 1rem;">
+                    <img src="assets/images/team/jane wambui founder.jpg" alt="Jane Wambui - Founder" width="80" height="80" style="border-radius:50%;object-fit:cover; margin-bottom: 1rem;">
                     <h3 style="margin: 0 0 0.3rem 0; color: #1e90ff;">Jane Wambui</h3>
                     <p style="font-weight: 600; margin: 0 0 0.5rem 0; color: #00cfff;">Founder & CEO</p>
                     <p style="font-size: 0.98rem;">Jane has over 15 years of experience in international recruitment and is passionate about empowering Kenyans to achieve their dreams abroad.</p>
                 </div>
                 <div class="team-card wow animate__animated animate__zoomIn" data-wow-delay="0.3s" style="background: #fff; color: #222; border-radius: 1.2rem; box-shadow: 0 2px 16px rgba(30,144,255,0.10); padding: 2rem 1.5rem 1.5rem 1.5rem; max-width: 260px; min-width: 220px; display: flex; flex-direction: column; align-items: center;">
-                    <img src="assets/images/testimonial2-placeholder.jpg" alt="Peter Mwangi - Visa Specialist" width="80" height="80" style="border-radius:50%;object-fit:cover; margin-bottom: 1rem;">
+                    <img src="assets/images/team/peter mwangi visa specialist.jpg" alt="Peter Mwangi - Visa Specialist" width="80" height="80" style="border-radius:50%;object-fit:cover; margin-bottom: 1rem;">
                     <h3 style="margin: 0 0 0.3rem 0; color: #1e90ff;">Peter Mwangi</h3>
                     <p style="font-weight: 600; margin: 0 0 0.5rem 0; color: #00cfff;">Visa Specialist</p>
                     <p style="font-size: 0.98rem;">Peter guides clients through the visa process, ensuring all paperwork is accurate and deadlines are met.</p>
                 </div>
                 <div class="team-card wow animate__animated animate__zoomIn" data-wow-delay="0.4s" style="background: #fff; color: #222; border-radius: 1.2rem; box-shadow: 0 2px 16px rgba(30,144,255,0.10); padding: 2rem 1.5rem 1.5rem 1.5rem; max-width: 260px; min-width: 220px; display: flex; flex-direction: column; align-items: center;">
-                    <img src="assets/images/testimonial3-placeholder.jpg" alt="Amina Kilonzo - Client Support" width="80" height="80" style="border-radius:50%;object-fit:cover; margin-bottom: 1rem;">
+                    <img src="assets/images/team/amina kilonzo.jpg" alt="Amina Kilonzo - Client Support" width="80" height="80" style="border-radius:50%;object-fit:cover; margin-bottom: 1rem;">
                     <h3 style="margin: 0 0 0.3rem 0; color: #1e90ff;">Amina Kilonzo</h3>
                     <p style="font-weight: 600; margin: 0 0 0.5rem 0; color: #00cfff;">Client Support</p>
                     <p style="font-size: 0.98rem;">Amina is dedicated to answering your questions and making your journey as smooth as possible.</p>
@@ -138,6 +138,12 @@
             <a href="#" title="LinkedIn" aria-label="LinkedIn">
                 <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="16" cy="16" r="16" fill="#0077B5"/><rect x="10" y="13" width="2.5" height="8" fill="#fff"/><circle cx="11.25" cy="11.25" r="1.25" fill="#fff"/><rect x="14" y="16" width="2.5" height="5" fill="#fff"/><rect x="17" y="16" width="2.5" height="5" fill="#fff"/><path d="M18.25 16c0-1.25 1.25-2.25 2.5-2.25s2.5 1 2.5 2.25v5h-2.5v-5z" fill="#fff"/></svg>
             </a>
+        </div>
+        <div class="footer-partners" style="display: flex; justify-content: center; align-items: center; gap: 1.5rem; margin: 1.2rem 0 0.5rem 0; flex-wrap: wrap;">
+          <img src="assets/images/patners/mastercard.jpg" alt="Mastercard" style="height: 32px; width: auto;">
+          <img src="assets/images/patners/american express.jpg" alt="American Express" style="height: 32px; width: auto;">
+          <img src="assets/images/patners/paypal.jpg" alt="PayPal" style="height: 32px; width: auto;">
+          <img src="assets/images/patners/visa.jpg" alt="Visa" style="height: 32px; width: auto;">
         </div>
         <div class="footer-copy">&copy; 2025 VisaPath. All rights reserved.</div>
     </footer>
