--- a/contact.html
+++ b/contact.html
@@ -80,6 +80,12 @@
                 <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="16" cy="16" r="16" fill="#0077B5"/><rect x="10" y="13" width="2.5" height="8" fill="#fff"/><circle cx="11.25" cy="11.25" r="1.25" fill="#fff"/><rect x="14" y="16" width="2.5" height="5" fill="#fff"/><rect x="17" y="16" width="2.5" height="5" fill="#fff"/><path d="M18.25 16c0-1.25 1.25-2.25 2.5-2.25s2.5 1 2.5 2.25v5h-2.5v-5z" fill="#fff"/></svg>
             </a>
         </div>
+        <div class="footer-partners" style="display: flex; justify-content: center; align-items: center; gap: 1.5rem; margin: 1.2rem 0 0.5rem 0; flex-wrap: wrap;">
+          <img src="assets/images/patners/mastercard.jpg" alt="Mastercard" style="height: 32px; width: auto;">
+          <img src="assets/images/patners/american express.jpg" alt="American Express" style="height: 32px; width: auto;">
+          <img src="assets/images/patners/paypal.jpg" alt="PayPal" style="height: 32px; width: auto;">
+          <img src="assets/images/patners/visa.jpg" alt="Visa" style="height: 32px; width: auto;">
+        </div>
         <div class="footer-copy">&copy; 2025 VisaPath. All rights reserved.</div>
     </footer>
     <script src="js/script-contact.js"></script>
