--- a/jobs.html
+++ b/jobs.html
@@ -1440,6 +1440,12 @@
             </a>
         </div>
         <div class="footer-copy">&copy; 2025 VisaPath. All rights reserved.</div>
+        <div class="footer-partners" style="display: flex; justify-content: center; align-items: center; gap: 1.5rem; margin: 1.2rem 0 0.5rem 0; flex-wrap: wrap;">
+          <img src="assets/images/patners/mastercard.jpg" alt="Mastercard" style="height: 32px; width: auto;">
+          <img src="assets/images/patners/american express.jpg" alt="American Express" style="height: 32px; width: auto;">
+          <img src="assets/images/patners/paypal.jpg" alt="PayPal" style="height: 32px; width: auto;">
+          <img src="assets/images/patners/visa.jpg" alt="Visa" style="height: 32px; width: auto;">
+        </div>
     </footer>
     <!-- Application Modal -->
     <div id="applyModal" class="modal" style="display:none;">
